# Genesis-Core

./: .bandit  .env  .env.example  .gitattributes  .gitignore  .jscpd.json  .jscpd.shard-a.json  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  1d_optimization_results.json  1d_optimization_summary.py  1d_optimized_configs.json  AGENTS.md  CHANGELOG.md  CLAUDE-LOCAL.md  CLAUDE.md  CODE_REVIEW.md  COMMITMSG.txt  COMMIT_MSG_HTF_EXITS.txt  CURSOR_RULES.txt  FINAL_SESSION_REPORT.md  GENESIS-CORE-POST PHASE-9-ROADMAP.md  GENESIS_WORKING_CONTRACT.md  GRANSKNING_2025-10-07.md  Genesis-Core router research — codebase-aware re-evaluation.md  MCP_IMPLEMENTATION_SUMMARY.md  OPTUNA_6MONTH_PROBLEM_REPORT.md  OPTUNA_PERFORMANCE_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE3_CONFLICTS.md  PROJECT_RULES.md  README.agents.md  README.md  SESSION_SUMMARY_2025-10-10.md  TODO.md  TODO_PHASE3.5.md  TODO_PHASE3.md  analyze_full_registry.py  analyze_tbtcusd_models.py  (+59 more)
.claude/: QUICK_REF.md  launch.json  session_end.md  session_start.md
.cursor/: worktrees.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
archive/: README.md
archived_docs/: ARCHITECTURE_phase1-2.md  PHASE3_CONFLICTS.md  ROBUSTNESS_IMPLEMENTATION_GUIDE_superseded.md  STRATEGY_SPEC_phase3.md
config/: README.md  __init__.py  backtest_defaults.yaml  champion_weights.json  mcp_settings.json  mcp_settings.remote_git.json  mcp_settings.remote_safe.json  override_test.json  runtime.backup.json  runtime.seed.json  test_combo_1.json  test_combo_2.json  test_combo_3.json  test_combo_4.json  test_grid.yaml  test_override.json  timeframe_configs.py  validation_config.json
data/: DATA_FORMAT.md
docs/: 1H_TIMEFRAME_OPTIMIZATION_RESULTS.md  ADVANCED_VALIDATION_PRODUCTION.md  AI_AGENT_READING_ORDER.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  ARCHIVE_TAXONOMY.md  CURRENT_AUTHORITY_INDEX.md  DATA_STORAGE_STRATEGY.md  DOCUMENTATION_ANALYSIS.md  EXIT_LOGIC_IMPLEMENTATION.md  EXIT_LOGIC_RESULTS_CRITICAL_ANALYSIS.md  FEATURES_V17_VALIDATION_REPORT.md  FEATURE_COMPUTATION_MODES.md  FIBONACCI_COMBINATION_ANALYSIS.md  FIBONACCI_FRAKTAL_EXITS_IMPLEMENTATION_NEXT_PLAN.md  FIBONACCI_FRAKTAL_EXITS_IMPLEMENTATION_PLAN.md  FIB_GATING_DEBUG_20251027.md  FORALDRADE_DOKUMENT_20251114.md  GENESIS-CORE_FEATURES.md  Genesis-Core-Regime-Intelligence-V1-Design-Document.md  HANDOFF_RISK_STATE.md  HTF_FIBONACCI_EXITS_SUMMARY.md  INDICATORS_REFERENCE.md  INVESTIGATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  OPTUNA_FIX_20251113.md  OPTUNA_FIX_SUMMARY.md  OPUS_46_GOVERNANCE.md  ORIGINAL_REPO_MENTIONS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_GUIDE.md  PORTING.md  README.md  RESEARCH_TAXONOMY_RI_LEGACY_SHARED.md  ROBUSTNESS_IMPLEMENTATION_GUIDE.md  SHARE.md  TODO.md  (+26 more)
scripts/: README.md  (+228 more)
(+18776 files in other folders)
