[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<0.117",
  "uvicorn>=0.24,<0.25",
  "httpx>=0.25,<0.26",
  "websockets>=12,<13",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2,<3",
  "python-dotenv>=1,<2",
  "jsonschema>=4.20,<5"
]

[project.optional-dependencies]
dev = [
  "black>=24.10",
  "ruff>=0.6",
  "pytest>=8",
  "pytest-asyncio>=0.23,<1",
  "bandit>=1.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
